--- a/kamehouse-ui/src/main/webapp/kamehouse/css/banners/kamehouse-banners-dragonball.css
+++ b/kamehouse-ui/src/main/webapp/kamehouse/css/banners/kamehouse-banners-dragonball.css
@@ -74,7 +74,7 @@
   
   @media (max-width : 499px) {
     .banner-gohan-ssj2-2 {
-      background-position-x: -130px;
+      background-position-x: 0px;
     }
   }
   
