--- a/kamehouse-ui/src/main/webapp/kamehouse/css/banners/kamehouse-banners-star-wars.css
+++ b/kamehouse-ui/src/main/webapp/kamehouse/css/banners/kamehouse-banners-star-wars.css
@@ -16,7 +16,7 @@
   
   @media (max-width : 499px) {
     .banner-anakin {
-      background-position-x: -90px;
+      background-position-x: 0px;
     }
   }
   
